<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/task_options_menu_mark_completed"
        android:orderInCategory="100"
        android:title="@string/task_options_menu_mark_completed"
        app:showAsAction="never" />
    <item
        android:id="@+id/task_options_menu_add_to_daily_planner"
        android:orderInCategory="100"
        android:title="@string/task_options_menu_add_to_daily_planner"
        app:showAsAction="never" />
    <item
        android:id="@+id/task_options_menu_edit"
        android:orderInCategory="100"
        android:title="@string/task_options_menu_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/task_options_menu_delete"
        android:orderInCategory="100"
        android:title="@string/task_options_menu_delete"
        app:showAsAction="never" />
</menu>
