<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_view_goal_img"
                android:src="@drawable/ic_flag_black_24dp"
                android:theme="@style/AppTheme.ItemViewImage"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:theme="@style/AppTheme.ItemViewTextView"
                android:id="@+id/task_view_goal_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/task_view_completed_layout">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_view_completed_img"
                android:src="@drawable/ic_assignment_turned_in_black_24dp"
                android:theme="@style/AppTheme.ItemViewImage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:theme="@style/AppTheme.ItemViewTextView"
                android:id="@+id/task_view_completed_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/task_view_duedate_layout">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_view_duedate_img"
                android:src="@drawable/ic_date_range_black_24dp"
                android:theme="@style/AppTheme.ItemViewImage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:theme="@style/AppTheme.ItemViewTextView"
                android:id="@+id/task_view_dutedate_text"
                android:hint="@string/task_view_date_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/task_view_duetime_layout">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_view_duetime_img"
                android:src="@drawable/ic_access_time_black_24dp"
                android:theme="@style/AppTheme.ItemViewImage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:theme="@style/AppTheme.ItemViewTextView"
                android:id="@+id/task_view_duetime_text"
                android:hint="@string/task_view_time_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_view_importance_img"
                android:src="@drawable/ic_warning_black_24dp"
                android:theme="@style/AppTheme.ItemViewImage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:theme="@style/AppTheme.ItemViewTextView"
                android:id="@+id/task_view_importance_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_view_urgent_img"
                android:src="@drawable/ic_timer_black_24dp"
                android:theme="@style/AppTheme.ItemViewImage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:theme="@style/AppTheme.ItemViewTextView"
                android:id="@+id/task_view_urgent_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_view_notes_img"
                android:src="@drawable/ic_short_text_black_24dp"
                android:theme="@style/AppTheme.ItemViewImage" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:theme="@style/AppTheme.ItemViewTextView"
                android:id="@+id/task_view_notes_text"
                android:hint="@string/task_view_notes_hint"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
